# cognee

./: .dockerignore  .gitignore  Context.md  pyproject.toml  wecom-wecom-openclaw-plugin-2026.5.7.tgz
cognee/: context_global_variables.py
cognee-code/: AGENTS.md  docker-compose.yml
cognee-code/docs/: M1-knowledge-file-management.md  M2-graph-knowledge.md  M3-code-rule-management.md  M4-ai-task-management.md  M5-supplementary-ai-agent-features.md  M6-extended-ai-agent-features.md  M7-tenant-user-role-permission.md  M8-opencode-sdk-integration.md  M9-1-memory-design.md  M9-2-plugin-project-dataset-rules-integration.md  M9-agent-memory-plugin.md  code-rules-project-binding-design.md  functional-requirements.md  (+1 more)
cognee-code/server/: AGENTS.md  Dockerfile  README.md  entrypoint.sh  pyproject.toml
cognee-code/server/cognee/data/: EbeanApi项目使用指南.md  Web注解实战规范.md  text_1b001d13a38ead0a249eda343cfd80ce.txt  text_5c5cd932e4119f4e6dcaea312614220e.txt  关联查询去重分页.md
cognee-code/server/cognee/data/63d3d142-8661-435e-8c68-5061bda1d2c3/: DataService使用文档.md  test_muninn.txt  text_815d49517c1b7b777d0276561885cc67.txt  text_f75243f9e3dfb4a4ddc1cb3978593c56.txt  业务需求v1.0
cognee-code/server/cognee/system/databases/: cognee_db  cognee_graph_kuzu.wal
cognee-code/server/cognee/system/databases/63d3d142-8661-435e-8c68-5061bda1d2c3/: 1f76b6b7-1006-59c9-893c-2ec0919879ce.pkl  57db78bd-df42-5c71-b4df-ad4d8b3ed4ac.pkl  57db78bd-df42-5c71-b4df-ad4d8b3ed4ac.pkl.wal  727e1e49-c215-4ddc-9305-434064831e98.pkl  727e1e49-c215-4ddc-9305-434064831e98.pkl.wal  8c5399a1-821b-5f0d-9dfd-5af027e12e7c.pkl  8c5399a1-821b-5f0d-9dfd-5af027e12e7c.pkl.wal
cognee-code/server/cognee/system/databases/78fe6e80-2f0c-4d8d-8a8c-163783d6227e/: f1b6a2a7-7e25-5c11-b97d-1e8367536942.pkl  f1b6a2a7-7e25-5c11-b97d-1e8367536942.pkl.wal
cognee-code/server/cognee/system/databases/9be983ae-c6c1-4fc7-b7aa-7fa0124cd248/: 197e891f-dacc-56e5-bad4-7bcd7de04cfa.pkl
cognee-code/server/cognee/system/databases/a95e2e6b-67bb-4d65-b01a-c13c62c4f7eb/: 60cae880-4132-56dd-8fea-1e143076732b.pkl
cognee-code/server/cognee/system/databases/c6864f0f-2ca3-4abd-8dbd-fb692e13d32d/: 44e0ce14-5429-534a-9409-cb8673b0db4c.pkl  92af81fa-6c77-5987-8754-9cc2dee5efb8.pkl
cognee-code/server/cognee/system/databases/d2b21c1c-2e76-4a2c-9672-39ee671e5f5c/: 9ff0c18b-dcfb-517d-85a5-f4a29f5986bd.pkl.wal
cognee-code/server/src/: main.py
cognee-code/server/src/modules/access_control/: routers.py
cognee-code/server/src/modules/knowledge/: cognify_router.py  graph_router.py  learn_router.py  learn_service.py  models.py  routers.py  services.py  sse_event_bus.py  sse_routers.py  vault_key_router.py
cognee-code/server/src/modules/mcp/: server.py
cognee-code/server/src/modules/muninn/: admin.py
cognee-code/server/src/modules/projects/: models.py  router.py  service.py
cognee-code/server/src/modules/rules/: router.py  service.py
cognee-code/server/tests/: __init__.py  test_api.py  test_auth_diagnosis.py  test_projects_muninn.py
cognee-mcp/: pyproject.toml
(+259 files in other folders)
