[project]
name = "cognee-backend"
version = "0.1.0"
description = "Cognee Code Backend Platform"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # For local cognee repo usage remove comment bellow and add absolute path to cognee. Then run `uv sync --reinstall` in the mcp folder on local cognee changes.
    "cognee[neo4j] @ file:///root/workspace/github/cognee",
    #"cognee[postgres,docs,neo4j]==0.5.0",
    "pgvector>=0.3.5,<0.4",
    "asyncpg>=0.30.0,<1.0.0",
    "fastmcp>=2.10.0,<3.0.0",
    "mcp>=1.12.0,<2.0.0",
    "uv>=0.6.3,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
]

authors = [
    { name = "Boris Arzentar", email = "boris@topoteretes.com" },
    { name = "Igor Ilic", email = "igor@topoteretes.com" },
    { name = "Laszlo Hajdu", email = "laszlo@topoteretes.com" },
]

[build-system]
requires = [ "hatchling", ]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "debugpy>=1.8.12,<2.0.0",
    "pytest>=7.4.0,<8",
    "pytest-asyncio>=0.21.1,<0.22",
    "httpx>=0.27.0,<1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
cognee = "src:main"
cognee-mcp = "src:main_mcp"
